--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@
     </script>
     <body onload="InitLive2D()" style="-webkit-app-region: drag">
         <audio id="my_audio"></audio>
-        <div class="message" style="opacity:0.2;" width="300" height="50">dsdsdsd</div>
+        <!-- <div class="message" style="opacity:0.2;" width="300" height="50">dsdsdsd</div> -->
         <canvas id="mycanvas" width="300" height="400" ></canvas>
   </body>
   <script>
