暂时的系统设置页面

--- a/app/system.html
+++ b/app/system.html
@@ -11,26 +11,19 @@
       body{
           overflow: hidden;
       }
-      .wechat-img{
-          background: url("../img/wechat.jpg") no-repeat;
-          background-size: 100% 100%;
-          position: absolute;
-          width: 200px;
-          height: 200px;
-      }
   </style>
 
   <body>
     <!-- Wrap your entire app inside .window -->
     <div class="window">
         <!-- .toolbar-header sits at the top of your app -->
-        <header class="toolbar toolbar-header”>
+        <header class="toolbar toolbar-header” style="height:50px;">
             <div class="toolbar-actions">
               <div class="btn-group">
-                <button class="btn btn-default">
+                <button class="btn btn-default active">
                   <span class="icon icon-home"></span>
                 </button>
-                <!-- <button class="btn btn-default">
+                <button class="btn btn-default">
                   <span class="icon icon-folder"></span>
                 </button>
                 <button class="btn btn-default">
@@ -41,13 +34,13 @@
                 </button>
                 <button class="btn btn-default">
                   <span class="icon icon-shuffle"></span>
-                </button> -->
+                </button>
               </div>
               <!-- <button class="btn btn-default">
                 <span class="icon icon-home icon-text"></span>
                 Filters
-              </button> -->
-              <!-- <button class="btn btn-default btn-dropdown pull-right">
+              </button> --> 
+              <!-- <!-- <button class="btn btn-default btn-dropdown pull-right">
                 <span class="icon icon-megaphone"></span>
               </button> -->
             </div>
